# Pool-Game

./: .gitignore  CMakeLists.txt  README.md  makefile
CMakeModules/: FindBullet.cmake  FindSDL2TTF.cmake  FindSOIL.cmake
data/: poolball.mtl  poolstick.mtl  pooltablecurvedwalls.mtl
include/: EventEnums.h  GameObject.h  InputManager.h  camera.h  configureLoader.h  engine.h  graphics.h  graphics_headers.h  object.h  shader.h  window.h
shaders/: gouraudFragment.glsl  gouraudVertex.glsl  phongFragment.glsl  phongVertex.glsl
src/: InputManager.cpp  camera.cpp  configureLoader.cpp  engine.cpp  graphics.cpp  main.cpp  object.cpp  shader.cpp  window.cpp
